--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <DOCTYPE html>
     <html lang="nl">
         <head>
-            
+            <title>Dagje Haarlem</title>
         </head>
     </html>
 </DOCTYPE>
