Added meta information

--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
     <html lang="nl">
         <head>
             <title>Dagje Haarlem</title>
+            <meta charset="utf-8">
+            <meta name="description" content="Webmarkup Assessment 24 mei 2019">
+            <meta name="keywords" content="HTML, CSS">
+            <meta name="author" content="Mohamed Saji">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
         </head>
     </html>
 </DOCTYPE>
