--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
             <meta name="author" content="Mohamed Saji">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
         </head>
+        <body>
+        </body>
     </html>
 </DOCTYPE>
