--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
         </head>
         <body>
+            <h1>Dagje Haarlem</h1>
+            <h2>Sport in Europawijk</h2>
         </body>
     </html>
 </DOCTYPE>
