--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
         <body>
             <h1>Dagje Haarlem</h1>
             <h2>Sport in Europawijk</h2>
+            <nav>
+                <ul>
+                    <li>Haarlem</li>
+                    <li>Europawijk</li>
+                    <li>Sport</li>
+                    <li>Contact</li>
+                </ul>
+            </nav>
         </body>
     </html>
 </DOCTYPE>
