--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             <h2>Sport in Europawijk</h2>
             <nav>
                 <ul>
-                    <li>Haarlem</li>
-                    <li>Europawijk</li>
-                    <li>Sport</li>
-                    <li>Contact</li>
+                    <li><a href="#haarlem">Haarlem</a></li>
+                    <li><a href="#europawijk">Europawijk</a></li>
+                    <li><a href="#sport">Sport</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </body>
