--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <h2>Sport in Europawijk</h2>
             <nav>
                 <ul>
-                    <li><a href="#haarlem">Haarlem</a></li>
-                    <li><a href="#europawijk">Europawijk</a></li>
+                    <li><a href="#main">Haarlem</a></li>
+                    <li><a href="#secondary">Europawijk</a></li>
                     <li><a href="#sport">Sport</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
