Added sport content

--- a/index.html
+++ b/index.html
@@ -33,6 +33,21 @@
                     </p>
                 </article>
             </section>
+            <section>
+                <header id="sport"><h3>Sport</h3></header>
+                <article>
+                    <h4>Olympia Haarlem</h4>
+                    <p>Het Olympia Haarlem biedt een aantal sporten om te eoefenen. Niet alleen voetbal maar o.a. ook badminston en honkbal</p>
+                    <a href="http://www.olympiahaarlem.nl/"> <img alt="Een honkbal en honkbalhandschoen"></a>
+                    <h4>Healthtime</h4>
+                    <p>Voor een leefstijl verandering biedt Healthtime pilates en boksfit lessen, persoonlijke advies/begeleiding en meer.</p>
+                    <a href="https://www.healthtime.nl/"> <img alt="Pilates oefening"></a>
+                    <h4>Schietvereniging</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
+                    <a href="http://www.generaalvanmerlen.nl/"> <img alt="Een doelwit"></a>
+                    <h4></h4>
+                </article>
+            </section>
         </body>
     </html>
 </DOCTYPE>
