Changed sport content

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus.
                     </p>
                 </article>
-            </section>
+            </section>  
             <section>
                 <header id="secondary"><h3>Europawijk</h3></header>
                 <article>
@@ -35,17 +35,55 @@
             </section>
             <section>
                 <header id="sport"><h3>Sport</h3></header>
-                <article>
+                <article class="sportArticle">
+                    <h4>Hwa-Rang Dragon</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
+                    <a href="https://www.taekwon.nl/brazilian-jiu-jitsu/"> <img alt=""></a>
+                </article>
+                <article class="sportArticle">
                     <h4>Olympia Haarlem</h4>
-                    <p>Het Olympia Haarlem biedt een aantal sporten om te eoefenen. Niet alleen voetbal maar o.a. ook badminston en honkbal</p>
+                    <p>Het Olympia Haarlem biedt een aantal verschillende sporten om te eoefenen. Van voetbal en badminston tot honkbal en zelfs frisbee.</p>
                     <a href="http://www.olympiahaarlem.nl/"> <img alt="Een honkbal en honkbalhandschoen"></a>
+                </article>
+                <article class="sportArticle">
                     <h4>Healthtime</h4>
                     <p>Voor een leefstijl verandering biedt Healthtime pilates en boksfit lessen, persoonlijke advies/begeleiding en meer.</p>
                     <a href="https://www.healthtime.nl/"> <img alt="Pilates oefening"></a>
-                    <h4>Schietvereniging</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
+                </article>
+                <article class="sportArticle">
+                    <h4>Schietvereniging Generaal van Merlen</h4>
+                    <p>Sinds 1892. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
                     <a href="http://www.generaalvanmerlen.nl/"> <img alt="Een doelwit"></a>
-                    <h4></h4>
+                </article>
+                <article class="sportArticle">
+                    <h4>Sportclub HLC</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
+                    <a href="https://sportclubhlc.jimdo.com/"> <img alt="Turn oefening"></a>
+                </article>
+                <article class="sportArticle">
+                    <h4>Daan Sport</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
+                    <a href="https://www.daansport.nl/"> <img alt="Kickbokshandschoen"></a>
+                </article>
+                <article class="sportArticle">
+                    <h4>SV Dio</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
+                    <a href="https://svdio.nl/"> <img alt="een voetbal"></a>
+                </article>
+                <article class="sportArticle">
+                    <h4>Fir For Free Sportschool</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
+                    <a href="https://www.fitforfree.nl/"> <img alt="fitne"></a>
+                </article>
+                <article class="sportArticle">
+                    <h4>BC Triple Threat</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
+                    <a href="https://vereniging.triplethreat.nl/"> <img alt="Een basketball"></a>
+                </article>
+                <article class="sportArticle">
+                    <h4>SportProfs</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
+                    <a href="http://www.sportprofs.net/"> <img alt=""></a>
                 </article>
             </section>
         </body>
