--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <DOCTYPE html>
     <html lang="nl">
         <head>
-            <title>Dagje Haarlem</title>
+            <title>Hallo Haarlem</title>
             <meta charset="utf-8">
             <meta name="description" content="Webmarkup Assessment 24 mei 2019">
             <meta name="keywords" content="HTML, CSS">
