--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <body>
             <h1>Dagje Haarlem</h1>
             <h2>Sport in Europawijk</h2>
-            <nav>
+            <nav id="navigation">
                 <ul>
-                    <li><a href="#main">Haarlem</a></li>
-                    <li><a href="#secondary">Europawijk</a></li>
-                    <li><a href="#sport">Sport</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li class="navigationList"><a href="#main">Haarlem</a></li>
+                    <li class="navigationList"><a href="#secondary">Europawijk</a></li>
+                    <li class="navigationList"><a href="#sport">Sport</a></li>
+                    <li class="navigationList"><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
             <section>
