--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
         </head>
         <body>
-            <h1>Dagje Haarlem</h1>
-            <h2>Sport in Europawijk</h2>
+            <h1>Hallo Haarlem</h1>
+            <h2>Europawijk en omgeving</h2>
             <nav id="navigation">
                 <ul>
                     <li class="navigationList"><a href="#main">Haarlem</a></li>
