--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                     </p>
                 </article>
             </section>
-            <section>
-                <header id="sport"><h3>Sport</h3></header>
+            <section id="sportSection">
+                <header id="sportHeader"><h3>Sport</h3></header>
                 <article class="sportArticle">
                     <h4>Hwa-Rang Dragon</h4>
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
@@ -85,6 +85,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
                     <a href="http://www.sportprofs.net/"> <img alt=""></a>
                 </article>
+                <footer class="footer">&copy; Mohamed Saji 641010</footer>
             </section>
             <section id="referralSection">
                 <headder>
