Changed main content

--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
                     <li class="navigationList"><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
-            <section>
-                <header id="main"><h3>Haarlem</h3></header>
-                <article>
+            <section id="mainSection">
+                <header id="mainHeader"><h3>Haarlem</h3></header>
+                <article id="mainArticle">
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus.
                     </p>
                 </article>
+                <footer class="footer">&copy; Mohamed Saji 641010</footer>
             </section>  
             <section id="secodarySection">
                 <header id="secondaryHeader"><h3>Europawijk</h3></header>
