--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             <h2>Europawijk en omgeving</h2>
             <nav id="navigation">
                 <ul>
-                    <li class="navigationList"><a href="#main">Haarlem</a></li>
-                    <li class="navigationList"><a href="#secondary">Europawijk</a></li>
-                    <li class="navigationList"><a href="#sport">Sport</a></li>
-                    <li class="navigationList"><a href="#contact">Contact</a></li>
+                    <li class="navigationList"><a href="#mainSection">Haarlem</a></li>
+                    <li class="navigationList"><a href="#secondarySection">Europawijk</a></li>
+                    <li class="navigationList"><a href="#sportSection">Sport</a></li>
+                    <li class="navigationList"><a href="#contactSection">Contact</a></li>
                 </ul>
             </nav>
             <section id="mainSection">
