Added contact content

--- a/index.html
+++ b/index.html
@@ -99,6 +99,19 @@
                 </aside>
                 <footer class="footer">&copy; Mohamed Saji 641010</footer>
             </section>
+            <section id="contactSection">
+                <header id="contactHeader"><h3>Contact</h3></header>
+                <p>Heeft u vragen of wilt u contact opnemen? Dan kunt u hier een bericht versturen.</p>
+                <form action="http://witan.nl/inholland/testform.php">
+                    <fieldset id="contactFieldset">
+                        <legend id="contactLegend">Bericht</legend>
+                        <p>Voornaam en achternaam: <input type="text" name="name"></p>
+                        <p>E-mailadres: <input type="text" name="email"></p>
+                        <p>Bericht: <input type="text" name="message"></p>
+                    </fieldset>
+                </form>
+            </section>
+            <footer class="footer">&copy; Mohamed Saji 641010</footer>
         </body>
     </html>
 </DOCTYPE>
