--- a/index.html
+++ b/index.html
@@ -90,9 +90,7 @@
                 <footer class="footer">&copy; Mohamed Saji 641010</footer>
             </section>
             <section id="referralSection">
-                <headder>
-                    <h3>Hwa-Rang Dragon</h3>
-                </headder>
+                <header id="referralHeader"><h3>Hwa-Rang Dragon</h3></header>
                 <aside id="referralAside">
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.</p>
                     <a href="https://www.taekwon.nl/brazilian-jiu-jitsu/"></a>
