Added cookie statement

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
                 </form>
             </section>
             <footer class="footer">&copy; Mohamed Saji 641010</footer>
+            <p id="cookies">Deze webpagina maakt gebruik van cookies</p>
         </body>
     </html>
 </DOCTYPE>
