Added html comments

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <DOCTYPE html>
     <html lang="nl">
         <head>
+            <!--titel-->
             <title>Hallo Haarlem</title>
+            <!--meta info-->
             <meta charset="utf-8">
             <meta name="description" content="Webmarkup Assessment 26 mei 2019">
             <meta name="keywords" content="HTML, CSS">
@@ -11,6 +13,7 @@
         <body>
             <h1>Hallo Haarlem</h1>
             <h2>Europawijk en omgeving</h2>
+            <!--navigation-->
             <nav id="navigation">
                 <ul>
                     <li class="navigationList"><a href="#mainSection">Haarlem</a></li>
@@ -19,6 +22,7 @@
                     <li class="navigationList"><a href="#contactSection">Contact</a></li>
                 </ul>
             </nav>
+            <!--main content-->
             <section id="mainSection">
                 <header id="mainHeader"><h3>Haarlem</h3></header>
                 <article id="mainArticle">
@@ -26,7 +30,8 @@
                     </p>
                 </article>
                 <footer class="footer">&copy; Mohamed Saji 641010</footer>
-            </section>  
+            </section>
+            <!--secondary content-->
             <section id="secondarySection">
                 <header id="secondaryHeader"><h3>Europawijk</h3></header>
                 <article id="secondaryArticle">
@@ -35,6 +40,7 @@
                 </article>
                 <footer class="footer">&copy; Mohamed Saji 641010</footer>
             </section>
+            <!--sport content-->
             <section id="sportSection">
                 <header id="sportHeader"><h3>Sport</h3></header>
                 <article class="sportArticle">
@@ -89,6 +95,7 @@
                 </article>
                 <footer class="footer">&copy; Mohamed Saji 641010</footer>
             </section>
+            <!--referral content-->
             <section id="referralSection">
                 <header id="referralHeader"><h3>Hwa-Rang Dragon</h3></header>
                 <aside id="referralAside">
@@ -97,6 +104,7 @@
                 </aside>
                 <footer class="footer">&copy; Mohamed Saji 641010</footer>
             </section>
+            <!--contact content-->
             <section id="contactSection">
                 <header id="contactHeader"><h3>Contact</h3></header>
                 <p class="contactP">Heeft u vragen of wilt u contact opnemen? Dan kunt u hier een bericht versturen.</p>
@@ -111,7 +119,9 @@
                     </fieldset>
                 </form>
             </section>
+            <!--footer-->
             <footer class="footer">&copy; Mohamed Saji 641010</footer>
+            <!--cookies-->
             <p id="cookies">Deze webpagina maakt gebruik van cookies</p>
         </body>
     </html>
