Added link to stylesheet and comment

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
             <meta name="keywords" content="HTML, CSS">
             <meta name="author" content="Mohamed Saji">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <!--css-->
+            <link rel="stylesheet" type="text/css" href="css/style.css">
         </head>
         <body>
             <h1>Hallo Haarlem</h1>
