Added header with id for h1 and h2 and comment

--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
             <link rel="stylesheet" type="text/css" href="css/style.css">
         </head>
         <body>
+            <!--website header-->
+            <header id="firstHeader">
             <h1>Hallo Haarlem</h1>
             <h2>Europawijk en omgeving</h2>
+            </header>
             <!--navigation-->
             <nav id="navigation">
                 <ul>
