Changed id body

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <!--css-->
             <link rel="stylesheet" type="text/css" href="css/style.css">
         </head>
-        <body id="bodyGrid">
+        <body id="body">
             <!--website header-->
             <header id="firstHeader">
             <h1>Hallo Haarlem</h1>
