Changed main content

--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
             <section id="mainSection">
                 <header id="mainHeader"><h3>Haarlem</h3></header>
                 <article id="mainArticle">
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus.
+                    <p>Interesse in oude stad Haarlem? Mooi want er is genoeg te doen, zien en eten. Haarlem kent een enorm aanbod aan restaurants en café. Langer dan een nacht de stad bezoeken kan dankzij de hotels. Of een kamer boeken kan ook.
+                        
+                        Er is een groot aantal bezienswaardigheden in Haarlem. Eén daarvan is de Grote of Sint-Bavokerk. De grootste kerk van de stad gewijd aan Sint-Bavo.. Gelegen in het midden van de stad zou je kunnen zeggen dat het het hart van de stad is. De kerk bezit een orgel dat in het verleden bespeeld werd door onder andere Händel en Mozart op een jonge leeftijd. Eén ander bezienswaardigheid is de Kathedrale Basiliek Sint Bavo dat ook gewijd is aan Sint-Bavo. Niet ver en ten zuidwesten van de Grote of Sint-Bavokerk. De Grote Markt is een plek in de stad waar de activiteiten worden georganiseerd. De warenmarkt vind er twee keer par week plaats, kermissen en elk jaar muziekevenementen.
+                        
+                        Zo is er nog veel meer in de stad. Bezoek snel de stad een keer.
                     </p>
                 </article>
                 <footer class="footer">&copy; Mohamed Saji 641010</footer>
