Changed class footer to id footer

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 </form>
             </section>
             <!--footer-->
-            <footer class="footer">&copy; Mohamed Saji 641010</footer>
+            <footer id="footer">&copy; Mohamed Saji 641010</footer>
             <!--cookies-->
             <p id="cookies">Deze webpagina maakt gebruik van cookies</p>
         </body>
