Added background video

--- a/index.html
+++ b/index.html
@@ -136,6 +136,9 @@
             <footer id="footer">&copy; Mohamed Saji 641010</footer>
             <!--cookies-->
             <p id="cookies">Deze webpagina maakt gebruik van cookies</p>
+            <video autoplay="" muted="" loop="" id="video">
+                <source src="video/Haarlem%20in%20vogelvlucht.mp4" type="video/mp4">
+            </video>
         </body>
     </html>
 </DOCTYPE>
